Minor spacing fixes

--- a/css/styles.css
+++ b/css/styles.css
@@ -1056,6 +1056,7 @@ opacity: 0.6;
 				}
 			}*/
 			@media only screen and (max-width: 650px){
+
 				h1 {
 					font-size: 45px;
 					padding-top: 20px;
@@ -1214,7 +1215,7 @@ opacity: 0.6;
 				}
 
 				.involveMotto {
-					font-size: 35px;
+					font-size: 40px;
 					margin-top: 20px;
 				}
 
@@ -1232,6 +1233,10 @@ opacity: 0.6;
 
 				#involveBackground {
 					position: absolute;
+				}
+
+				.mottoParagraph {
+					margin-top: 25px;
 				}
 			}
 
